# cookiecutter-cmake-cpp

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name|lower}}/: CMakeLists.txt  LICENSE  README.rst
{{cookiecutter.project_name|lower}}/src/: CMakeLists.txt  {{cookiecutter.exe_name}}.cpp
